--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -120,9 +120,7 @@
         }
 
 
-        svg {
-            margin-top: 8px;
-            margin-left: 5px;
+        md-icon {
             width: 36px;
             height: 36px;
             fill: @svgQuizPlay;
@@ -181,6 +179,12 @@
 
         .col-sm-4 {
             padding: 0 5px;
+        }
+
+        @media(min-width: 600px) {
+            .action-btn {
+                max-width: 32%;
+            }
         }
     }
 
