--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Settings.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Settings.cshtml
@@ -51,7 +51,7 @@
         </md-input-container>
         <md-input-container layout="row" layout-align="end center" flex="100" flex-gt-md="33">
             <button type="button" scroll-to-top class="cancel-btn" ng-click="b.settingsOpen = false" ga-track-event="['box-settings', 'cancel']">@GeneralResources.Cancel</button>
-            <button type="submit" class="action-btn space-left" ng-disabled="b.settings.submitDisabled || !updateBoxForm.$valid" ga-track-event="['box-settings', 'save']">@GeneralResources.SaveChanges</button>
+            <button type="submit" class="action-btn space-before" ng-disabled="b.settings.submitDisabled || !updateBoxForm.$valid" ga-track-event="['box-settings', 'save']">@GeneralResources.SaveChanges</button>
         </md-input-container>
     </div>
 </form>
