--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
@@ -107,7 +107,7 @@
                                     <label for="rememberMe">@LogOnResources.RememberMe</label>
                                 </div>
 
-                                <button type="submit" class="blue-button button-Blue">
+                                <button type="submit" class="action-btn">
                                     @LogOnResources.LogIn
                                 </button>
                             </div>
@@ -138,8 +138,8 @@
                                 <span></span>
                             </div>
                             <div class="form-actions">
-                                <button type="reset" class="grey-button cancel" data-form-action="login">@GeneralResources.Cancel</button>
-                                <button type="submit" class="blue-button button-Blue">@LogOnResources.Submit</button>
+                                <button type="reset" class="cancel-btn" data-form-action="login">@GeneralResources.Cancel</button>
+                                <button type="submit" class="action-btn space-before">@LogOnResources.Submit</button>
                             </div>
                         </form>
                     </div>
@@ -211,7 +211,7 @@
                                     <a class="tos" target="_blank" href="@Url.RouteUrl("TOS")">&nbsp;@RegisterResources.TermsOfServices</a>&nbsp;@RegisterResources.And&nbsp;<a target="_blank" href="@Url.RouteUrl("Privacy")">@RegisterResources.PrivacyPolicy</a>&nbsp;@RegisterResources.ofZbang
                                 </div>
 
-                                <button type="submit" id="register-submit-btn" class="blue-button button-Blue">
+                                <button type="submit" id="register-submit-btn" class="action-btn">
                                     @LogOnResources.SignUp
                                 </button>
                             </div>
