--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_EmptyStateTopTree.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_EmptyStateTopTree.cshtml
@@ -33,6 +33,6 @@
                 </div>
             </md-input-container>
         </div>
-        <button type="submit" class="btn button-Blue btn-primary pull-right" ng-disabled="l.submitDisabled" ga-track-event="['university', 'first time populate university']">@GeneralResources.Create</button>
+        <button type="submit" class="action-btn pull-right" ng-disabled="l.submitDisabled" ga-track-event="['university', 'first time populate university']">@GeneralResources.Create</button>
     </form>
 </div>
