--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
@@ -173,7 +173,9 @@
             }
 
             .buttons {
-                display: inline-block;
+                .displayFlex;
+                .align-items(center);
+                .justifyContet(flex-end);
                 width: 100%;
                 padding-right: 20px;
             }
