--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.rtl.css
@@ -136,7 +136,13 @@
   border-radius: 4px;
 }
 .library-choose .add-univeristy form .buttons {
-  display: inline-block;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
   width: 100%;
   padding-left: 20px;
 }
