--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/UnregisterView.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/UnregisterView.cshtml
@@ -6,6 +6,6 @@
 }
 <div class="login-buttons">
     <a ng-click="ud.signup($event)" class="signup-header-btn" target="_self" href="@Url.RouteUrl("HomePage", new { returnUrl, invId, step="signup" })" ga-track-event="['header', 'sign up']">@IndexResources.Signup</a>
-    <a ng-click="ud.signup($event)" class="signin-header-btn space-left" target="_self" href="@Url.RouteUrl("HomePage", new { returnUrl, invId, step="signin" })" ga-track-event="['header', 'log in']">@IndexResources.Login</a>
+    <a ng-click="ud.signup($event)" class="signin-header-btn space-before" target="_self" href="@Url.RouteUrl("HomePage", new { returnUrl, invId, step="signin" })" ga-track-event="['header', 'log in']">@IndexResources.Login</a>
 </div>
 
