--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Create.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Create.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="buttons text-capitalize" layout="row" layout-align="end center">
             <button type="button" class="cancel-btn" ga-track-event="['dashboard', 'createbox', 'cancel']" ng-click="cb.cancel(createBox)">@GeneralResources.Cancel</button>
-            <button type="submit" class="action-btn space-left" ga-track-event="['dashboard', 'createbox', 'done']" ng-disabled="!createBox.$valid || cb.submitDisabled">@GeneralResources.Create</button>
+            <button type="submit" class="action-btn space-before" ga-track-event="['dashboard', 'createbox', 'done']" ng-disabled="!createBox.$valid || cb.submitDisabled">@GeneralResources.Create</button>
         </div>
     </form>
 </div>
