--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/UploadDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/UploadDialog.cshtml
@@ -54,10 +54,10 @@
                         <div ng-hide="u.files.length">
                             <div>@IndexResources.DragHere</div>
                             <div class="buttons">
-                                <md-button class="btn btn-default" ng-click="u.uploadStep = 0">
+                                <md-button class="cancel-btn" ng-click="u.uploadStep = 0">
                                     @GeneralResources.Cancel
                                 </md-button>
-                                <a plupload="u.fileUpload.url" plupload-options="u.fileUpload.options" class="btn button-Blue btn-primary upload-button" plupload-callbacks="u.fileUpload.callbacks">
+                                <a plupload="u.fileUpload.url" plupload-options="u.fileUpload.options" class="action-btn space-before upload-button" plupload-callbacks="u.fileUpload.callbacks">
                                     @IndexResources.UploadFiles
                                 </a>
                             </div>
@@ -98,10 +98,10 @@
                                 </div>
                             </md-input-container>
                             <div class="buttons">
-                                <md-button class="btn btn-default" ng-click="u.uploadStep = 0">
+                                <md-button class="cancel-btn" ng-click="u.uploadStep = 0">
                                     @GeneralResources.Cancel
                                 </md-button>
-                                <input type="submit" class="btn button-Blue btn-primary pull-right" ng-disabled="u.submitFormProcess || !uploadLink.$valid" value="@UserResources.Share" />
+                                <button type="submit" class="action-btn space-before" ng-disabled="u.submitFormProcess || !uploadLink.$valid">@UserResources.Share</button>
                             </div>
                         </form>
                     </div>
