--- a/Zbang.Cloudents.Mvc4WebRole/Views/Share/InviteDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Share/InviteDialog.cshtml
@@ -53,10 +53,10 @@
                 <div class="empty-state" ng-if="i.tab === i.state.spitball && !i.allContacts.length">@IndexResources.EmptyStateSpitballInvite</div>
                 <div class="empty-state" ng-if="i.tab === i.state.email && !i.allContacts.length">@IndexResources.EmptyStateGmailInvite</div>
                 <div class="bottom">
-                    <md-button class="close btn btn-default" scroll-to-top ng-click="i.closeInvite()" ga-track-event="['invite', 'cancel']">
+                    <md-button class="cancel-btn" scroll-to-top ng-click="i.closeInvite()" ga-track-event="['invite', 'cancel']">
                         @GeneralResources.Cancel
                     </md-button>
-                    <md-button class="btn button-Blue btn-primary send" ga-track-event="['invite', 'send']" ng-if="i.allContacts.length" ng-click="i.sendInvite()" ng-disabled="i.submitDisabled">
+                    <md-button class="action-btn space-before send" ga-track-event="['invite', 'send']" ng-if="i.allContacts.length" ng-click="i.sendInvite()" ng-disabled="i.submitDisabled">
                         @IndexResources.Send
                     </md-button>
                 </div>
@@ -67,10 +67,10 @@
                 </div>
 
                 <div class="bottom">
-                    <md-button class="close btn btn-default" scroll-to-top ng-click="i.closeInvite()" ga-track-event="['invite', 'cancel']">
+                    <md-button class="cancel-btn close" scroll-to-top ng-click="i.closeInvite()" ga-track-event="['invite', 'cancel']">
                         @GeneralResources.Cancel
                     </md-button>
-                    <button class="btn button-Blue btn-primary gmail" ng-click="i.importGoogleContract()" type="button" ga-track-event="['invite', 'import gmail']">
+                    <button class="gmail action-btn space-before" ng-click="i.importGoogleContract()" type="button" ga-track-event="['invite', 'import gmail']">
                         <span>
                             @LogOnResources.ExternalProvider
                         </span>
@@ -83,10 +83,10 @@
                 </div>
 
                 <div class="bottom">
-                    <md-button class="close btn btn-default" scroll-to-top ng-click="i.closeInvite()" ga-track-event="['invite', 'cancel']">
+                    <md-button class="close cancel-btn" scroll-to-top ng-click="i.closeInvite()" ga-track-event="['invite', 'cancel']">
                         @GeneralResources.Cancel
                     </md-button>
-                    <button class="btn button-Blue btn-primary gmail" ng-click="i.fbShare()" type="button" ga-track-event="['invite', 'import gmail']">
+                    <button class="gmail action-btn space-before" ng-click="i.fbShare()" type="button" ga-track-event="['invite', 'import gmail']">
                         <span>
                             @UserResources.Share
                         </span>
