--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_StaticPageHeader.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_StaticPageHeader.cshtml
@@ -66,8 +66,8 @@
         @if (!User.Identity.IsAuthenticated)
         {
             <div class="login-buttons">
-                <a style="background:@ViewBag.signupColor" class="signup-btn toggle login-option signup os-animation" href="@Url.RouteUrl("HomePage", new { step = "signup" })" data-form-action="register">@IndexResources.Signup</a>
-                <a class="signin-btn toggle login-option os-animation" href="@Url.RouteUrl("HomePage", new { step = "signin" })" data-form-action="login">@HomePageResources.A1</a>
+                <a style="background:@ViewBag.signupColor" class="signup-btn action-btn toggle login-option signup os-animation" href="@Url.RouteUrl("HomePage", new { step = "signup" })" data-form-action="register">@IndexResources.Signup</a>
+                <a class="cancel-btn signin-btn toggle login-option os-animation" href="@Url.RouteUrl("HomePage", new { step = "signin" })" data-form-action="login">@HomePageResources.A1</a>
             </div>
         }
     </nav>
