--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/Choose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/Choose.cshtml
@@ -32,11 +32,11 @@
         </div>
         <div ng-if="lc.term.length && lc.universities.length" class="add-uni-btn">
             <div>@UniversityResources.NoMoreSchools</div>
-            <md-button class="btn button-Blue btn-primary text-capitalize" ng-click="lc.createUniversity = true" ga-track-event="['universityChoose', 'add new university']">@UniversityResources.AddSchool</md-button>
+            <md-button class="action-btn text-capitalize" ng-click="lc.createUniversity = true" ga-track-event="['universityChoose', 'add new university']">@UniversityResources.AddSchool</md-button>
         </div>
         <div ng-if="lc.term.length > 1 && lc.showNoResult" class="no-result">
             <img src="@Url.CdnContent("/Images/Site/no_uni.png?v=3")" alt="lama no university" />
-            <md-button class="btn button-Blue btn-primary text-capitalize" ng-click="lc.createUniversity = true" ga-track-event="['universityChoose', 'add new university']">@UniversityResources.AddSchool</md-button>
+            <md-button class="action-btn text-capitalize" ng-click="lc.createUniversity = true" ga-track-event="['universityChoose', 'add new university']">@UniversityResources.AddSchool</md-button>
         </div>
        
         <img ng-if="!lc.term" src="@Url.CdnContent("/Images/Site/search_uni.png?v=3")" alt="lama search" />
