--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_CreateDepartment.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_CreateDepartment.cshtml
@@ -14,8 +14,8 @@
             </md-input-container>
         </md-content>
         <div class="buttons" layout="row" layout-align="end center text-capitalize">
-            <button type="button" class="btn btn-default" ng-click="l.departmentCancel(createDepartment)" ga-track-event="['university', 'cancel new department']">@GeneralResources.Cancel</button>
-            <button type="submit" class="btn button-Blue btn-primary" ng-disabled="!createDepartment.$valid || l.submitDisabled" ga-track-event="['university', 'create new department']">@GeneralResources.Create</button>
+            <button type="button" class="cancel-btn" ng-click="l.departmentCancel(createDepartment)" ga-track-event="['university', 'cancel new department']">@GeneralResources.Cancel</button>
+            <button type="submit" class="action-btn space-before" ng-disabled="!createDepartment.$valid || l.submitDisabled" ga-track-event="['university', 'create new department']">@GeneralResources.Create</button>
         </div>
     </form>
 </div>
