--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_Settings.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_Settings.cshtml
@@ -19,7 +19,7 @@
                 <div class="warning">@BoxResources.PrivacyOneWayClick</div>
             </div>
             <div layout="row" layout-align="end center" class="text-capitalize" flex="100">
-                <button type="button" class="btn btn-default" ng-click="l.settingsOpen = false" ga-track-event="['university', 'cancel settings']">@GeneralResources.Cancel</button>
-                <button type="submit" class="btn button-Blue btn-primary" ng-disabled="l.submitDisabled" ga-track-event="['itemPage', 'save settings']">@GeneralResources.SaveChanges</button>
+                <button type="button" class="cancel-btn" ng-click="l.settingsOpen = false" ga-track-event="['university', 'cancel settings']">@GeneralResources.Cancel</button>
+                <button type="submit" class="action-btn space-before" ng-disabled="l.submitDisabled" ga-track-event="['itemPage', 'save settings']">@GeneralResources.SaveChanges</button>
             </div>
         </form>
